--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     overflow: hidden;
     position: fixed;
     top: 7px;
+    left: 0px;
     width: 100%;
     /* margin: auto; */
     /* margin-right: 7px; */
