--- a/phone.css
+++ b/phone.css
@@ -3,8 +3,13 @@
     display: flex;
     flex-direction: column;
     top: 0px;
+    justify-content: center;
+
+    /* left: 0px; */
+    /* width: 100%; */
 }
 #navbar {
+    /* display: none !important; */
     margin: 0px;
 }
 #navbar li a {
@@ -25,6 +30,11 @@
 }
 #navbar li a {
     font-size: 1.2rem;
+}
+@media screen and (max-width: 450px) {
+    #navbar li a {
+        font-size: 0.7rem;
+    }
 }
 .intro-section{
     font-size: 1rem;
