--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@ body {
     background-color: rgb(23, 22, 22);
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #2e2aa8 45%, #6224d6 60%, #285aeb 90%);
 }
+h1{
+    margin: 10px auto;
+    padding: 10px;
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Baloo Bhaina 2', 'Nunito', 'Overlock', 'Caveat', Georgia, 'Times New Roman', Times, serif;
+}
 
 .upper {
     /* border: 2px solid black; */
@@ -92,6 +99,7 @@ body {
     background-color: rgba(0, 0, 0, 0.347);
     backdrop-filter: blur(30px);
     font-size: 1.5rem;
+    color: #cfcec0;
 }
 .intro-section img{
     width: 350px;
@@ -100,6 +108,11 @@ body {
 .intro{
     margin: 35px;
     /* color: white; */
+    text-align: center;
+}
+.intro p{
+    font-size: 2.5rem;
+    margin: 0;
 }
 .intro-section a{
     text-decoration: none;
@@ -123,16 +136,14 @@ body {
     box-shadow: 2px 2px 2px white;
 }
 
-
-.section {
+.services{
     display: flex;
-    border: 2px solid white;
-    border-radius: 30px;
+    flex-direction: column;
     margin: 15px;
     padding: 5px;
-    justify-content: center;
     background: linear-gradient(132deg, #c3aa05, #b50eb5, #3f4dcd);
-    background-size: 400% 400%;
+    border: 2px solid white;
+    border-radius: 30px;
     animation: Gradient 3s ease infinite;
     position: relative;
 }
@@ -146,6 +157,13 @@ body {
     100% {
       background-position: 0% 50%;
     }
+}
+.section {
+    display: flex;
+    justify-content: center;
+    /* background: linear-gradient(132deg, #c3aa05, #b50eb5, #3f4dcd); */
+    /* background-size: 400% 400%; */
+    position: relative;
 }
 .section-items {
     /* border: 2px solid white; */
@@ -180,6 +198,22 @@ body {
     right: 7px;
     box-shadow: 7px 7px 7px white;
     /* transition: 0.5s; */
+}
+.teachers{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    font-size: 20px;
+    margin: 15px;
+    font-family: 'Baloo Bhaina 2', 'Nunito', 'Overlock', 'Caveat', Georgia, 'Times New Roman', Times, serif;
+}
+.teachers h3{
+    font-size: 25px;
+    margin-bottom: 0px;
+}
+.teachers img{
+    width: 300px;
+    border-radius: 50%;
 }
 
 
@@ -246,10 +280,10 @@ input[type="radio"]
 
 
 footer {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.403);
     color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 .footer-items {
     margin: 30px;
@@ -259,9 +293,21 @@ footer {
 }
 .footer-items pre{
     font-size: 1.2rem;
+    text-decoration: none;
+}
+.footer-items a{
+    color: white;
 }
 footer img{
     width: 400px;
+}
+/* #shivalik{
+    display: flex;
+    flex-direction: column;
+} */
+#footerlogo{
+    width: 100px;
+    margin-left: 20px;
 }
 
 .gototop button {
